Closed Bug 929012 Opened 12 years ago Closed 12 years ago

Annotate on crash reports that content processes are turned on

Categories

(Core :: IPC, defect)

26 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: kairo, Assigned: billm)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

We should annotate on crash reports that e10s is turned on for content processes, so that we can do searches and reports for that.
And while we're at annotations and e10s, we may want to make sure that bug 616134 is/gets fixed as well.
Blocks: e10s
Depends on: 616134
No longer blocks: e10s
No longer depends on: 616134
bill/cpeterson: now that the blog post has gotten a lot of press and people are actively trying e10s mode on nightly this is significantly skewing crash-stats. Can you prioritize getting this annotation into nightly so that we can separate out the e10s crashes from normal nightly stats?
Flags: needinfo?(wmccloskey)
Flags: needinfo?(cpeterson)
On IRC, bsmedberg said we need to add a DOMIPCEnabled=1 annotation using nsICrashReporter.annotateCrashReport(). Here is an example: https://mxr.mozilla.org/mozilla-central/source/accessible/src/base/nsAccessibilityService.cpp#1100
Flags: needinfo?(cpeterson)
Attached patch crash-annotationSplinter Review
Assignee: nobody → wmccloskey
Status: NEW → ASSIGNED
Attachment #8345060 - Flags: review?(benjamin)
Flags: needinfo?(wmccloskey)
Attachment #8345060 - Flags: review?(benjamin) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Flags: in-testsuite?
Blocks: 1072278
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: