Bug 929012 - Annotate on crash reports that content processes are turned on (r=bsmedberg)